--- a/helm/go-web-app-chart/templates/deployment.yaml
+++ b/helm/go-web-app-chart/templates/deployment.yaml
@@ -17,6 +17,6 @@ spec:
     spec:
       containers:
       - name: go-web-app
-        image: yfhates/go-web-app
+        image: yfhates/go-web-app:{{ .Values.image.tag }}
         ports:
         - containerPort: 8080
