--- a/helm/go-web-app-chart/values.yaml
+++ b/helm/go-web-app-chart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: yfhates/go-web-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "10016307834"
+  tag: "19"
 
 ingress:
   enabled: false
